add images and css, structure slot.html

--- a/slot.html
+++ b/slot.html
@@ -22,7 +22,41 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div id="page-container">        	
+        	<canvas id="background"></canvas>
+       		<img src="img/background-ufo.png" alt="" id="background-ufo">
+       		<div id="plate-container">
+       			<div id="star-color"></div>
+       			<div id="star-black"></div>
+       			<div id="bar-black"></div>
+       			<div id="bar-orange"></div>
+       			<div id="bar-blue"></div>
+       			<div id="bar-yellow"></div>
+       			<div id="bar-pink"></div>
+       			<img src="img/energy-plate.png" alt="" id="energy-plate">
+       		</div>
+       		<img src="img/pipe.png" alt="" id="pipe">
+        	<div id="config-container">
+        		<img src="" alt="" id="view-pays">
+        		<img src="" alt="" id="sound-off">
+        	</div>
+        	<div id="slot-container">
+        		<canvas id="slot"></canvas>
+        	</div>
+        	<div id="balance"></div>
+        	<div id="credits"></div>
+        	<div id="bet"></div>
+        	<div id="dialog"></div>
+        	<div id="winning-message"></div>
+        	<div id="buttons-container">
+        		<img src="" alt="" id="bubble-select"><img src="" alt="" id="select-lines">
+        		<img src="" alt="" id="bubble-set"><img src="" alt="" id="set-per-lines">
+        		<img src="" alt="" id="bubble-spin"><img src="" alt="" id="spin">
+        		<img src="" alt="" id="bubble-max"><img src="" alt="" id="max-bet">
+        	</div>
+        	<canvas id="characters"></canvas>
+        </div>
+       
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
