finish loading dog model

--- a/slot.html
+++ b/slot.html
@@ -16,6 +16,18 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/outer-space.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="js/vendor/jquery-1.8.2.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+        <script src="js/vendor/Detector.js"></script>
+        <script src="js/vendor/RequestAnimationFrame.js"></script>
+        <script src="js/vendor/stats.js"></script>
+        <script src="js/vendor/three.min.js"></script>
+        <script src="js/MANX.SlotMachine.BaseModel.js"></script>
+        <script src="js/OuterSpace.js"></script>
+        <script src="js/OuterSpace.reel.js"></script>
+        <script src="js/OuterSpace.slot.js"></script>
+        <script src="js/OuterSpace.charactersScene.js"></script>
+        <!-- <script src="js/main.js"></script> -->
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -24,7 +36,7 @@
 
         <!-- Add your site or application content here -->
         <div id="page-container">        	
-        	<canvas id="background"></canvas>
+        	<!-- <canvas id="background"></canvas> -->
        		<img src="img/background-ufo.png" alt="" id="background-ufo">
           <div id="game-title"></div>
             <img src="img/pipe.png" alt="" id="pipe">
@@ -60,7 +72,7 @@
         		<img src="" alt="" id="bubble-spin"><img src="" alt="" id="spin">
         		<img src="" alt="" id="bubble-max"><img src="" alt="" id="max-bet"> -->
         	</div>
-        	<canvas id="characters"></canvas>
+        	<div id="characters"></div>
         </div>
        
 
