add Earth background

--- a/slot.html
+++ b/slot.html
@@ -26,6 +26,7 @@
         <script src="js/OuterSpace.js"></script>
         <script src="js/OuterSpace.reel.js"></script>
         <script src="js/OuterSpace.slot.js"></script>
+        <script src="js/OuterSpace.spaceScene.js"></script>
         <script src="js/OuterSpace.charactersScene.js"></script>
         <!-- <script src="js/main.js"></script> -->
     </head>
@@ -37,6 +38,7 @@
         <!-- Add your site or application content here -->
         <div id="page-container">        	
         	<!-- <canvas id="background"></canvas> -->
+            <div id="background"></div>
        		<img src="img/background-ufo.png" alt="" id="background-ufo">
           <div id="game-title"></div>
             <img src="img/pipe.png" alt="" id="pipe">
