finish slot line drawing

--- a/slot.html
+++ b/slot.html
@@ -22,8 +22,10 @@
         <script src="js/vendor/RequestAnimationFrame.js"></script>
         <script src="js/vendor/stats.js"></script>
         <script src="js/vendor/three.min.js"></script>
+        <script src="js/vendor/backbone.min.js"></script>
         <script src="js/MANX.SlotMachine.BaseModel.js"></script>
         <script src="js/OuterSpace.js"></script>
+        <script src="js/OuterSpace.drawer.js"></script>
         <script src="js/OuterSpace.reel.js"></script>
         <script src="js/OuterSpace.slot.js"></script>
         <script src="js/OuterSpace.spaceScene.js"></script>
@@ -58,6 +60,9 @@
         	</div>
         	<div id="slot-container">
             <canvas id="slot"></canvas>
+            <div id="win-animation">
+              <video src="" id="win-video"></video>
+            </div>
         	</div>
         	<div id="balance"></div>
         	<div id="credits"></div>
