finish audio object

--- a/slot.html
+++ b/slot.html
@@ -22,9 +22,12 @@
         <script src="js/vendor/RequestAnimationFrame.js"></script>
         <script src="js/vendor/stats.js"></script>
         <script src="js/vendor/three.min.js"></script>
-        <script src="js/vendor/backbone.min.js"></script>
+        <script src="js/vendor/backbone-min.js"></script>
+        <script src="js/vendor/underscore-min.js"></script>
+        <script src="js/vendor/buzz.js"></script>
         <script src="js/MANX.SlotMachine.BaseModel.js"></script>
         <script src="js/OuterSpace.js"></script>
+        <script src="js/OuterSpace.audio.js"></script>
         <script src="js/OuterSpace.drawer.js"></script>
         <script src="js/OuterSpace.reel.js"></script>
         <script src="js/OuterSpace.slot.js"></script>
@@ -61,7 +64,7 @@
         	<div id="slot-container">
             <canvas id="slot"></canvas>
             <div id="win-animation">
-              <video src="" id="win-video"></video>
+              <video src="video/123.m4v" id="win-video"></video>
             </div>
         	</div>
         	<div id="balance"></div>
