--- a/slot.html
+++ b/slot.html
@@ -25,8 +25,8 @@
         <script src="js/vendor/backbone-min.js"></script>
         <script src="js/vendor/underscore-min.js"></script>
         <script src="js/vendor/buzz.js"></script>
-        <script src="js/MANX.SlotMachine.BaseModel.js"></script>
         <script src="js/OuterSpace.js"></script>
+        <script src="js/OuterSpace.baseModel.js"></script>
         <script src="js/OuterSpace.audio.js"></script>
         <script src="js/OuterSpace.drawer.js"></script>
         <script src="js/OuterSpace.reel.js"></script>
