--- a/slot.html
+++ b/slot.html
@@ -16,24 +16,6 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/outer-space.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="js/vendor/jquery-1.8.2.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-        <script src="js/vendor/Detector.js"></script>
-        <script src="js/vendor/RequestAnimationFrame.js"></script>
-        <script src="js/vendor/stats.js"></script>
-        <script src="js/vendor/three.min.js"></script>
-        <script src="js/vendor/backbone-min.js"></script>
-        <script src="js/vendor/underscore-min.js"></script>
-        <script src="js/vendor/buzz.js"></script>
-        <script src="js/OuterSpace.js"></script>
-        <script src="js/OuterSpace.baseModel.js"></script>
-        <script src="js/OuterSpace.audio.js"></script>
-        <script src="js/OuterSpace.drawer.js"></script>
-        <script src="js/OuterSpace.reel.js"></script>
-        <script src="js/OuterSpace.slot.js"></script>
-        <script src="js/OuterSpace.spaceScene.js"></script>
-        <script src="js/OuterSpace.charactersScene.js"></script>
-        <!-- <script src="js/main.js"></script> -->
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -44,7 +26,7 @@
         <div id="page-container">        	
         	<!-- <canvas id="background"></canvas> -->
             <div id="background"></div>
-       		<img src="img/background-ufo.png" alt="" id="background-ufo">
+       		<!-- <img src="img/background-ufo.png" alt="" id="background-ufo"> -->
           <div id="game-title"></div>
             <img src="img/pipe.png" alt="" id="pipe">
        		<div id="plate-container">
@@ -86,8 +68,24 @@
         </div>
        
 
-        <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+        <script src="js/vendor/Detector.js"></script>
+        <script src="js/vendor/RequestAnimationFrame.js"></script>
+        <script src="js/vendor/stats.js"></script>
+        <script src="js/vendor/three.min.js"></script>
+        <script src="js/vendor/backbone-min.js"></script>
+        <script src="js/vendor/underscore-min.js"></script>
+        <script src="js/vendor/buzz.js"></script>
+        <script src="js/OuterSpace.js"></script>
+        <script src="js/OuterSpace.baseModel.js"></script>
+        <script src="js/OuterSpace.audio.js"></script>
+        <script src="js/OuterSpace.drawer.js"></script>
+        <script src="js/OuterSpace.reel.js"></script>
+        <script src="js/OuterSpace.slot.js"></script>
+        <script src="js/OuterSpace.spaceScene.js"></script>
+        <script src="js/OuterSpace.charactersScene.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
