Removed chang-e gif in Chinese. Commented out video.

--- a/slot.html
+++ b/slot.html
@@ -45,9 +45,9 @@
         	</div>
         	<div id="slot-container">
             <canvas id="slot"></canvas>
-            <div id="win-animation">
-              <video src="video/123.m4v" id="win-video"></video>
-            </div>
+          <div id="win-animation"><!--  
+              <video src="video/123.m4v" id="win-video"></video>-->
+            </div> 
         	</div>
         	<div id="balance"></div>
         	<div id="credits"></div>
