--- a/slot.html
+++ b/slot.html
@@ -73,7 +73,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
         <script src="js/vendor/Detector.js"></script>
         <script src="js/vendor/RequestAnimationFrame.js"></script>
-        <script src="js/vendor/stats.js"></script>
+        <script src="js/vendor/Stats.js"></script>
         <script src="js/vendor/three.min.js"></script>
         <script src="js/vendor/backbone-min.js"></script>
         <script src="js/vendor/underscore-min.js"></script>
