--- a/slot.html
+++ b/slot.html
@@ -83,7 +83,7 @@
         <script src="js/OuterSpace.audio.js"></script>
         <script src="js/OuterSpace.drawer.js"></script>
         <script src="js/OuterSpace.reel.js"></script>
-        <script src="js/OuterSpace.slot.js"></script>
+        <script src="js/OuterSpace.Slot.js"></script>
         <script src="js/OuterSpace.spaceScene.js"></script>
         <script src="js/OuterSpace.charactersScene.js"></script>
         <script src="js/plugins.js"></script>
